# rag-lamaindex

./: .env  .gitignore  README.md  app.py  debug_load.py  events.py  extractor.py  knowledge_data.json  main.py  prepare.py  pyproject.toml  rag_core.py  router.py  structured_query_builder.py  structured_store.py  workflow.py
.gradio/flagged/: dataset1.csv
models/: schema.py
