[project]
name = "rag-lamaindex"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
    "gradio>=5.0.0",
    "python-dotenv>=1.2.2",
    "certifi",
    "llama-index>=0.13.0",
    "llama-index-embeddings-cohere",
    "llama-index-vector-stores-pinecone",
    "cohere>=5.21.1,<6",
    "netfree-unstrict-ssl>=0.1.3",
    "llama-index-llms-cohere>=0.8.0",
    "pinecone>=7.3.0",
]
